k8s/imagepullsecret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ang-test-deployment
  namespace: ai-workloads
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-secret
